disable draft mode

--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,6 @@
 % !TeX program = lualatex
 
-\documentclass[12pt,draft]{article}
+\documentclass[12pt]{article}
 \usepackage[tmargin=1in,bmargin=0.5in,hmargin=0.5in]{geometry}
 \usepackage[backend=biber,style=gb7714-2025,gbpub=false]{biblatex}
 \usepackage[fontset=none,scheme=plain]{ctex}
